--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/adnanbezerra/valex-project#readme",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cryptr": "^4.0.1",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "cryptr": "^6.0.3",
     "dayjs": "^1.11.5",
